--- a/.c9/project.settings
+++ b/.c9/project.settings
@@ -7,7 +7,8 @@
                     "runner": "Django",
                     "command": "",
                     "name": "Django",
-                    "default": true
+                    "default": true,
+                    "debug": true
                 }
             },
             "@inited": "true"
