add blog app and grap weather data

--- a/.c9/project.settings
+++ b/.c9/project.settings
@@ -30,7 +30,7 @@
                     "default": true,
                     "env": {},
                     "name": "Django",
-                    "runner": "Django"
+                    "runner": "Django1"
                 }
             }
         }
